# metagrafo

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  PORTS.md  README.md  __main__.py  audio_processor.py  clean_transcribe.py  config.json  config_manager.py  file_transcribe.py  macos_optimized_transcribe.py  macos_whisper.py  main.py  model_list.json  model_manager.py  optimized_transcribe.py  performance_tracker.py  pyproject.toml  request_with_base64.json  requirements.txt  restart_server.sh  robust_transcribe.py  run_server.sh  scan_models.py  setup.py  simple_gui.py  simple_transcribe.py  start_server.sh  stop_server.sh  test_base64_audio.py  test_imports.py  test_mic.py  transcribe.py  transcribe_enhanced.py  transcription_service.py  whisperer.py
backend/: audio_utils.py  benchmark.py  config.py  debug_main.py  main.py  mlx_test.py  mlx_transcribe.py  models.py  requirements.txt  simple_test.sh  streaming.py  test_lightweight.py  test_mlx.py  test_run.py  test_stream.py  test_transcription.py  transcribe_app.py  transcription.py  transcription_whisper-large-finnish-v3.txt  transcription_whisper-large-mlx.txt  utils.py  websocket_manager.py
backend/core/: dependencies.py  hardware.py
backend/postprocessing/: core.py  export.py  spell_check.py  summarization.py
backups/working_transcription_20250611/: main.py  mlx_transcribe.py  test_mlx.py  transcription.py
frontend/: .eslintrc.json  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts  windsurf_deployment.yaml
frontend/public/: websocket_test.html
frontend/src/: App.css  App.tsx
realtime_transcription/: __init__.py
realtime_transcription/config/: __init__.py  config_manager.py
realtime_transcription/core/: __init__.py  audio_processor.py  task_manager.py
scripts/: graceful_shutdown.sh  manage_models.py  run_services.sh  test_audio.py  test_transcription.py
services/: __init__.py
tests/: __init__.py  conftest.py  test_audio_processor.py  test_config_manager.py  test_task_manager.py  test_whisper_model.py
(+11 files in other folders)
